# crane_x7_ros

crane_x7_control/launch/: crane_x7_fake_control.launch
crane_x7_description/urdf/: camera.urdf  crane_x7.urdf.xacro  crane_x7.xacro  crane_x7_arm.xacro  crane_x7_wide_two_finger_gripper.xacro
crane_x7_examples/scripts/: arm_joint_trajectory_example.py  bbox_server.py  crane_x7_pick_and_place_demo.py  hamburger_maker.py  paper_cup_tower.py  papercup_tower.py  set_angles.py
crane_x7_gazebo/worlds/: table2.world
crane_x7_moveit_config/config/: crane_x7.srdf
crane_x7_simulation/: CMakeLists.txt  package.xml
crane_x7_simulation/config/: crane_x7.yaml
crane_x7_simulation/launch/: simulation.launch
crane_x7_simulation/urdf/: crane_x7_transmissions.xacro  crane_x7_wide_two_finger_gripper_transmissions.xacro  simulated_crane_x7.sdf.xacro
