<?xml version="1.0"?>
<package format="2">
  <name>crane_x7_simulation</name>
  <version>0.1.0</version>
  <description>Launch and SDF files for running the CRANE X7 in simulation.</description>
  <maintainer email="nomura@rt-net.jp">nomura</maintainer>
  <license>APLv2</license>
  <url type="website">http://wiki.ros.org/crane_x7_simulation</url>
  <author email="git@killbots.net">Geoffrey Biggs</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>generate_distutils_setup</build_depend>

  <!--<run_depend>rospy</run_depend>-->
  <!--<run_depend>std_msgs</run_depend>-->
</package>
